export python path

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -199,10 +199,12 @@
     "# RDKit doens't consistently generate the same initial structures. \n",
     "# # For testing purposes we load structures from file\n",
     "# # this cell is hidden from docs. \n",
-    "# from pathlib import Path\n",
+    "from pathlib import Path\n",
     "\n",
     "# fn = Path(wfl.__file__).parent.resolve() / \"../tests/assets/daisy_chain_mlip_fitting.1.ch.rdkit.xyz\"\n",
-    "# smiles_configs = ConfigSet(fn)t\n"
+    "# smiles_configs = ConfigSet(fn)t\n",
+    "orig_pythonpath = os.environ[f\"PYTHONPATH\"]\n",
+    "os.environ[f\"PYTHONPATH\"] = f\"{Path(wfl.__file__).parent}:{orig_pythonpath}\"\n"
    ]
   },
   {
