debug stuff more

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +203,8 @@
     "\n",
     "# fn = Path(wfl.__file__).parent.resolve() / \"../tests/assets/daisy_chain_mlip_fitting.1.ch.rdkit.xyz\"\n",
     "# smiles_configs = ConfigSet(fn)t\n",
-    "orig_pythonpath = os.environ[f\"PYTHONPATH\"]\n",
-    "os.environ[f\"PYTHONPATH\"] = f\"{Path(wfl.__file__).parent}:{orig_pythonpath}\"\n"
+    "# orig_pythonpath = os.environ[f\"PYTHONPATH\"]\n",
+    "os.environ[f\"PYTHONPATH\"] = f\"{Path(wfl.__file__).parent}\"\n"
    ]
   },
   {
