typo in examples.daisy_chain_mlip_fitting.ipynb

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -550,9 +550,9 @@
     "    sys_name = \"github\",\n",
     "    job_name = \"gap-eval\",\n",
     "    resources = resources,\n",
-    "    check_interval=10, \n",
-    "    input_files=[\"gap.xml*\"],\n",
-    "    env_vars=[f'PYTHONPATH={Path.cwd()}:$PYTHONPATH'])\n",
+    "    check_interval = 10, \n",
+    "    input_files = [\"gap.xml*\"],\n",
+    "    env_vars = [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH'])\n"
    ]
   },
   {
