Turn off OpenMP for daisy chain test remote jobs

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -246,7 +246,7 @@
     "    \"num_inputs_per_queued_job\" :20,\n",
     "    \"pre_cmds\": ['echo \"-------------------------------------\"', \"which wfl\"],\n",
     "    \"post_cmds\": ['echo \"_______________________________\"', \"which wfl\"],\n",
-    "    \"env_vars\": [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH']\n",
+    "    \"env_vars\": [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH', 'OMP_NUM_THREADS=1']\n",
     "}\n"
    ]
   },
@@ -466,7 +466,7 @@
     "        \"num_cores\" : 2,\n",
     "        \"partitions\" : \"stndard\"}, \n",
     "    \"check_interval\": 5, \n",
-    "    \"env_vars\": [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH']\n",
+    "    \"env_vars\": [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH', 'OMP_NUM_THREADS=1']\n",
     "}\n"
    ]
   },
@@ -552,7 +552,7 @@
     "    resources = resources,\n",
     "    check_interval = 10, \n",
     "    input_files = [\"gap.xml*\"],\n",
-    "    env_vars = [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH'])\n"
+    "    env_vars = [f'PYTHONPATH={Path.cwd()}:$PYTHONPATH', 'OMP_NUM_THREADS=1'])\n"
    ]
   },
   {
