clean up example

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,15 +78,17 @@
     "from wfl.autoparallelize.remoteinfo import RemoteInfo\n",
     "from wfl.generate import smiles\n",
     "from wfl.utils.configs import atomization_energy\n",
+    "from wfl.select.simple import by_bool_func\n",
     "from wfl.fit import error\n",
     "import wfl.map\n",
+    "from pathlib import Path\n",
     "\n",
     "from expyre.resources import Resources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -94,7 +96,7 @@
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
     "# this cell is hidden from tutorials. \n",
-    "# np.random.seed(20230301)\n",
+    "np.random.seed(20230301)\n",
     "import os\n",
     "os.environ[\"WFL_DETERMINISTIC_HACK\"] = \"True\""
    ]
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,36 +193,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RDKit doens't consistently generate the same initial structures. \n",
-    "# # For testing purposes we load structures from file\n",
-    "# # this cell is hidden from docs. \n",
-    "# from pathlib import Path\n",
-    "\n",
-    "# fn = Path(wfl.__file__).parent.resolve() / \"../tests/assets/daisy_chain_mlip_fitting.1.ch.rdkit.xyz\"\n",
-    "# smiles_configs = ConfigSet(fn)t\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Run Molecular Dynamics simulation\n",
     "\n",
-    "We run the MD at 300 K with an NVT Berendsen thermostat to collect a pool of structures from which we will select diverse structures for the training set. \n",
-    "\n",
-    "\n",
-    "While diverse training set leads to better model extrapolation, structures too dissimilar to the region of interest are fitted at the expense of accuracy elsewhere. One way to spot structures somewhat distant from equilibrium is by checking for high force components. To do so we attach a selector function which will exclude unreasonable structures from those returned by the md script. "
+    "We run the MD at 300 K with an NVT Berendsen thermostat to collect a pool of structures from which we will select diverse structures for the training set. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +217,7 @@
     "    \"temperature_tau\": 500,  \n",
     "    \"results_prefix\": \"xtb_\",\n",
     "    \"traj_step_interval\": 5}\n",
-    "\n",
+    "    \n",
     "remote_info = {\n",
     "    \"sys_name\" : \"github\", \n",
     "    \"job_name\" : \"md\", \n",
@@ -243,43 +227,45 @@
     "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5,\n",
     "    \"num_inputs_per_queued_job\" :20,\n",
-    "    \"pre_cmds\": ['echo \"-------------------------------------\"', \"which wfl\"],\n",
-    "    \"post_cmds\": ['echo \"_______________________________\"', \"which wfl\"]\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "# set to None for github testing purposes\n",
-    "# This cell is hidden from being rendered in the docs. \n",
-    "# remote_info = None\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reasonable_forces(at):\n",
-    "    force_comps = at.get_forces()\n",
-    "    return np.all(np.linalg.norm(force_comps, axis=1) < 8)\n",
+    "}\n",
     "\n",
     "md_sample = md.sample(\n",
     "    inputs=smiles_configs, \n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
-    "    traj_select_during_func = reasonable_forces, \n",
     "    autopara_info = AutoparaInfo(\n",
     "        remote_info=remote_info),\n",
     "    **md_params\n",
     "    )\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter structures\n",
+    "\n",
+    "While diverse training set leads to better model extrapolation, structures too dissimilar to the region of interest are fitted at the expense of accuracy elsewhere. One way to spot structures somewhat distant from equilibrium is by checking for high force components. Below we exclude such structures via one of wfl's filtering functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def are_forces_reasonable(at):\n",
+    "    force_comps = at.arrays[\"xtb_forces\"]\n",
+    "    return np.all(np.linalg.norm(force_comps, axis=1) < 8)\n",
+    "    \n",
+    "outputs = OutputSpec(\"3.ch.rdkit.md.traj.filtered.xyz\") \n",
+    "\n",
+    "md_sample = by_bool_func(\n",
+    "    inputs = md_sample, \n",
+    "    outputs = outputs,\n",
+    "    at_filter = are_forces_reasonable \n",
+    ")"
    ]
   },
   {
@@ -292,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = OutputSpec(\"3.ch.rdkit.md.traj.local_soap.xyz\")\n",
+    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.local_soap.xyz\")\n",
     "\n",
     "descriptor_key = \"SOAP\"\n",
     "# Descriptor string, just as it would go into quip.\n",
@@ -346,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = OutputSpec(\"4.ch.rdkit.md.traj.soap.cur_selection.xyz\")\n",
+    "outputs = OutputSpec(\"5.ch.rdkit.md.traj.soap.cur_selection.xyz\")\n",
     "cur_selection = wfl.select.by_descriptor.CUR_conf_global(\n",
     "    inputs=md_soap_global,\n",
     "    outputs=outputs,\n",
@@ -358,8 +344,8 @@
     "    at_descs_info_key=\"SOAP\")\n",
     "    \n",
     "\n",
-    "train_fname = \"5.1.train.xyz\"\n",
-    "test_fname = \"5.2.test.xyz\"\n",
+    "train_fname = \"6.1.train.xyz\"\n",
+    "test_fname = \"6.2.test.xyz\"\n",
     "gap_fname='gap.xml'\n",
     "\n",
     "def process(at):\n",
@@ -373,23 +359,9 @@
     "    cur_selection,\n",
     "    OutputSpec(),\n",
     "    map_func = process)\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Label and save training and testing sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "# label and save training and testing sets\n",
     "train_inputs = ConfigSet(list(processed_cur_selection)[0::2])\n",
     "test_inputs = ConfigSet(list(processed_cur_selection)[1::2])\n",
     "\n",
@@ -409,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,12 +436,12 @@
     "        \"num_cores\" : 2,\n",
     "        \"partitions\" : \"stndard\"}, \n",
     "    \"check_interval\": 5, \n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -483,28 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fitting command:\n",
-      " gap_fit gap_file=gap.xml energy_parameter_name=xtb_energy force_parameter_name=xtb_forces default_sigma={0.001 0.01 0.0 0.0} config_type_kernel_regularisation=isolated_atom:0.0001:0.0001:0.0:0.0 rnd_seed=20230301 atoms_filename=/tmp/_GAP_fitting_configs.f8y7ibmk.xyz gap={ soap=T l_max=3 n_max=6 cutoff=3 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.3 cutoff_transition_width=0.5 : soap=T l_max=3 n_max=6 cutoff=6 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.6 cutoff_transition_width=1 : distance_2b=T cutoff=7 covariance_type=ard_se delta=1 theta_uniform=1.0 sparse_method=uniform n_sparse=10 } 2>&1 > gap_fit.out \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'gap.xml'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_configs = ConfigSet([train_fname, isolated_at_fname])\n",
     "wfl.fit.gap.simple.run_gap_fit(\n",
@@ -525,12 +478,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_fn_with_gap = \"6.1.train.gap.xyz\"\n",
-    "test_fn_with_gap = \"6.2.test.gap.xyz\"\n",
+    "train_fn_with_gap = \"7.1.train.gap.xyz\"\n",
+    "test_fn_with_gap = \"7.2.test.gap.xyz\"\n",
     "isolated_at_fn_with_gap = isolated_at_fname.replace('.xyz', '.gap.xyz')\n",
     "\n",
     "inputs = ConfigSet([train_fname, test_fname, isolated_at_fname])\n",
@@ -547,40 +500,9 @@
     "    sys_name = \"github\",\n",
     "    job_name = \"gap-eval\",\n",
     "    resources = resources,\n",
-    "    check_interval=10, \n",
-    "    input_files=[\"gap.xml*\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "# Set remote_info to None so that this can run on GitHub CI. \n",
-    "# This cell is hidden from being rendered in the docs. \n",
-    "# remote_info = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<wfl.configset.ConfigSet at 0x7ff96fe5c5b0>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    check_interval = 10, \n",
+    "    input_files = [\"gap.xml*\"])\n",
+    "\n",
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
     "    remote_info=remote_info)\n",
@@ -592,7 +514,7 @@
     "    properties=[\"energy\", \"forces\"],\n",
     "    output_prefix=\"gap_\",\n",
     "    autopara_info=gap_calc_autopara_info,\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -607,21 +529,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      atomization_energy/a atomization_energy/a    F/c    F/c\n",
-      "                    meV/at                    #  meV/Å      #\n",
-      "test                 17.34                   50 642.83   5070\n",
-      "train                14.97                   50 621.38   5106\n",
-      "_ALL_                16.20                  100 632.16  10176\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate atomization energies\n",
     "for fn in [train_fn_with_gap, test_fn_with_gap]:\n",
@@ -656,42 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "nbsphinx": "hidden"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "isolated_atoms.xtb.xyz\n",
-      "1.ch.rdkit.xyz\n",
-      "2.ch.rdkit.md.traj.xyz\n",
-      "3.ch.rdkit.md.traj.local_soap.xyz\n",
-      "4.ch.rdkit.md.traj.soap.cur_selection.xyz\n",
-      "5.1.train.xyz\n",
-      "5.2.test.xyz\n",
-      "gap.xml\n",
-      "6.1.train.gap.xyz\n",
-      "6.2.test.gap.xyz\n",
-      "gap_rmses.png\n",
-      "{'atomization_energy/atom': {'train': {'RMSE': 0.014974721709943664, 'MAE': 0.012622912654433502, 'count': 50}, '_ALL_': {'RMSE': 0.016200667521092393, 'MAE': 0.012965381227920191, 'count': 100}, 'test': {'RMSE': 0.01734015472732864, 'MAE': 0.013307849801406882, 'count': 50}}, 'forces/comp': {'train': {'RMSE': 0.6213796984853067, 'MAE': 0.4465803716686252, 'count': 5106}, '_ALL_': {'RMSE': 0.6321592191859141, 'MAE': 0.4509735702456762, 'count': 10176}, 'test': {'RMSE': 0.6428326175648255, 'MAE': 0.45539796313214986, 'count': 5070}}}\n",
-      "True\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb Cell 33\u001b[0m in \u001b[0;36m<cell line: 46>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m             \u001b[39massert\u001b[39;00m val \u001b[39m==\u001b[39m approx(pred_val, \u001b[39mabs\u001b[39m\u001b[39m=\u001b[39m\u001b[39m3e-1\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMismatch for ref prop \u001b[39m\u001b[39m{\u001b[39;00mprop_key\u001b[39m}\u001b[39;00m\u001b[39m config \u001b[39m\u001b[39m{\u001b[39;00mconfig_key\u001b[39m}\u001b[39;00m\u001b[39m measure \u001b[39m\u001b[39m{\u001b[39;00mmeasure_key\u001b[39m}\u001b[39;00m\u001b[39m ref \u001b[39m\u001b[39m{\u001b[39;00mval\u001b[39m}\u001b[39;00m\u001b[39m != actual \u001b[39m\u001b[39m{\u001b[39;00mpred_val\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWFL_DETERMINISTIC_HACK\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39menviron)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X45sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from pytest import approx\n",
@@ -702,13 +581,14 @@
     "    \"isolated_atoms.xtb.xyz\",\n",
     "    \"1.ch.rdkit.xyz\",\n",
     "    \"2.ch.rdkit.md.traj.xyz\",\n",
-    "    \"3.ch.rdkit.md.traj.local_soap.xyz\",\n",
-    "    \"4.ch.rdkit.md.traj.soap.cur_selection.xyz\",\n",
-    "    \"5.1.train.xyz\",\n",
-    "    \"5.2.test.xyz\",\n",
+    "    \"3.ch.rdkit.md.traj.filtered.xyz\",\n",
+    "    \"4.ch.rdkit.md.traj.local_soap.xyz\",\n",
+    "    \"5.ch.rdkit.md.traj.soap.cur_selection.xyz\",\n",
+    "    \"6.1.train.xyz\",\n",
+    "    \"6.2.test.xyz\",\n",
     "    \"gap.xml\",\n",
-    "    \"6.1.train.gap.xyz\",\n",
-    "    \"6.2.test.gap.xyz\",\n",
+    "    \"7.1.train.gap.xyz\",\n",
+    "    \"7.2.test.gap.xyz\",\n",
     "    \"gap_rmses.png\"\n",
     "]\n",
     "\n",
@@ -735,10 +615,7 @@
     "            if measure_key == \"count\":\n",
     "                continue\n",
     "            pred_val = errors[prop_key][config_key][measure_key]\n",
-    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n",
-    "\n",
-    "print(\"WFL_DETERMINISTIC_HACK\" in os.environ)\n",
-    "assert False"
+    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
    ]
   },
   {
