--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -434,7 +434,7 @@
     "    \"resources\" : { \n",
     "        \"max_time\" : \"15m\",\n",
     "        \"num_cores\" : 2,\n",
-    "        \"partitions\" : \"stndard\"}, \n",
+    "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5, \n",
     "}"
    ]
