--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -55,13 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from ase.io import read, write\n",
     "from ase import Atoms\n",
     "\n",
     "from xtb.ase.calculator import XTB\n",
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -96,9 +95,10 @@
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
     "# this cell is hidden from tutorials. \n",
-    "np.random.seed(20230301)\n",
     "import os\n",
-    "os.environ[\"WFL_DETERMINISTIC_HACK\"] = \"True\""
+    "random_seed = 20230301\n",
+    "np.random.seed(random_seed)\n",
+    "os.environ[\"WFL_DETERMINISTIC_HACK\"] = \"1\""
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +193,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# regenerate smiles_confgis with a random seed set for testing purposes\n",
+    "# this cell is hidden from docs. \n",
+    "\n",
+    "outputs = OutputSpec(\"1.ch.rdkit.xyz\", overwrite=True)\n",
+    "smiles_configs = smiles.run(all_smiles, outputs=outputs, randomSeed=random_seed)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -204,9 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating job md_chunk_0\n",
+      "ExPyRe md_chunk_0 constructor done stage in files 1678315110.891046\n",
+      "Starting job for md_chunk_0_rUdPf-6O8v8oGgIhZlbTarUFcD5475ePRFLimtjN-4c=_hosoi20l\n",
+      "Gathering results for md_chunk_0_rUdPf-6O8v8oGgIhZlbTarUFcD5475ePRFLimtjN-4c=_hosoi20l remote 207345\n",
+      "Waiting for job md_chunk_0_rUdPf-6O8v8oGgIhZlbTarUFcD5475ePRFLimtjN-4c=_hosoi20l up to 3600 s: \n",
+      "qrrr\n",
+      "Running wfl.generate.md._sample_autopara_wrappable with num_python_subprocesses=4, num_inputs_per_python_subprocess=1\n"
+     ]
+    }
+   ],
    "source": [
     "outputs = OutputSpec(\"2.ch.rdkit.md.traj.xyz\")\n",
     "\n",
@@ -217,16 +244,18 @@
     "    \"temperature_tau\": 500,  \n",
     "    \"results_prefix\": \"xtb_\",\n",
     "    \"traj_step_interval\": 5}\n",
-    "    \n",
     "remote_info = {\n",
-    "    \"sys_name\" : \"github\", \n",
+    "    \"sys_name\" : \"local\", \n",
     "    \"job_name\" : \"md\", \n",
     "    \"resources\" : { \n",
     "        \"max_time\" : \"15m\",\n",
-    "        \"num_cores\" : 2,\n",
-    "        \"partitions\" : \"standard\"}, \n",
+    "        \"num_cores\" : 4,\n",
+    "        \"partitions\" : \"any$\"}, \n",
+    "    \"partial_node\": True,\n",
     "    \"check_interval\": 5,\n",
     "    \"num_inputs_per_queued_job\" :20,\n",
+    "    \"pre_cmds\" :[\"conda activate dev\"],\n",
+    "    \"env_vars\": [\"WFL_DETERMINISTIC_HACK=1\"]\n",
     "}\n",
     "\n",
     "md_sample = md.sample(\n",
@@ -234,7 +263,9 @@
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
     "    autopara_info = AutoparaInfo(\n",
-    "        remote_info=remote_info),\n",
+    "        # remote_info=remote_info\n",
+    "        num_python_subprocesses=2\n",
+    "        ),\n",
     "    **md_params\n",
     "    )\n"
    ]
@@ -251,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,12 +467,24 @@
     "        \"num_cores\" : 2,\n",
     "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5, \n",
+    "}\n",
+    "remote_info = {\n",
+    "    \"sys_name\" : \"local\", \n",
+    "    \"job_name\" : \"md\", \n",
+    "    \"resources\" : { \n",
+    "        \"max_time\" : \"15m\",\n",
+    "        \"num_cores\" : 4,\n",
+    "        \"partitions\" : \"any$\"}, \n",
+    "    \"partial_node\": True,\n",
+    "    \"check_interval\": 5,\n",
+    "    \"num_inputs_per_queued_job\" :20,\n",
+    "    \"pre_cmds\" :[\"conda activate dev\"]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -450,14 +493,63 @@
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
     "# remote_info = None\n",
-    "gap_params[\"rnd_seed\"] = 20230301"
+    "gap_params[\"rnd_seed\"] = random_seed "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ExPyRe md constructor done stage in files 1678315145.4742718\n",
+      "Waiting for job md_v1KN9m9dA_vDclpSFPAZ-Cc0fn0qZk4vvZweDkcEwf0=_nexiodo6 up to 3600 s: \n",
+      "qqqr\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fitting command:\n",
+      " gap_fit gap_file=_gap.xml energy_parameter_name=xtb_energy force_parameter_name=xtb_forces default_sigma={0.001 0.01 0.0 0.0} config_type_kernel_regularisation=isolated_atom:0.0001:0.0001:0.0:0.0 rnd_seed=20230301 atoms_filename=/tmp/207346.1.any/_GAP_fitting_configs.jvsejeks.xyz gap={ soap=T l_max=3 n_max=6 cutoff=3 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.3 cutoff_transition_width=0.5 : soap=T l_max=3 n_max=6 cutoff=6 delta=0.1 covariance_type=dot_product zeta=4 n_sparse=20 sparse_method=cur_points atom_gaussian_width=0.6 cutoff_transition_width=1 : distance_2b=T cutoff=7 covariance_type=ard_se delta=1 theta_uniform=1.0 sparse_method=uniform n_sparse=10 } 2>&1 > _gap_fit.out \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9551 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9551\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9552 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9552\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9553 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9553\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9554 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9554\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9555 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9555\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9556 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9556\n",
+      "copying _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9557 gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9557\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9551\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9552\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9553\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9554\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9555\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9556\n",
+      "Deleting _gap.xml.sparseX.GAP_2023_3_8_0_22_39_29_9557\n",
+      "Deleting _gap.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'_gap.xml'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_configs = ConfigSet([train_fname, isolated_at_fname])\n",
     "wfl.fit.gap.simple.run_gap_fit(\n",
@@ -478,9 +570,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating job gap-eval_chunk_0\n",
+      "ExPyRe gap-eval_chunk_0 constructor done stage in files 1678315173.070296\n",
+      "Starting job for gap-eval_chunk_0_LUnTADgt4YxX5N5SOMSZa4TQqVrf4uSXxIX5cKGHcdo=_h_b7d327\n",
+      "Gathering results for gap-eval_chunk_0_LUnTADgt4YxX5N5SOMSZa4TQqVrf4uSXxIX5cKGHcdo=_h_b7d327 remote 207347\n",
+      "Waiting for job gap-eval_chunk_0_LUnTADgt4YxX5N5SOMSZa4TQqVrf4uSXxIX5cKGHcdo=_h_b7d327 up to 3600 s: \n",
+      "qr\n",
+      "Running wfl.calculators.generic._run_autopara_wrappable with num_python_subprocesses=2, num_inputs_per_python_subprocess=10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<wfl.configset.ConfigSet at 0x7f09ec5db400>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_fn_with_gap = \"7.1.train.gap.xyz\"\n",
     "test_fn_with_gap = \"7.2.test.gap.xyz\"\n",
@@ -503,6 +619,19 @@
     "    check_interval = 10, \n",
     "    input_files = [\"gap.xml*\"])\n",
     "\n",
+    "resources = Resources(\n",
+    "    max_time = \"15m\",\n",
+    "    num_cores = 2,\n",
+    "    partitions = \"any$\")\n",
+    "\n",
+    "remote_info = RemoteInfo(\n",
+    "    sys_name = \"local\",\n",
+    "    job_name = \"gap-eval\",\n",
+    "    resources = resources,\n",
+    "    check_interval = 10, \n",
+    "    partial_node=True,\n",
+    "    input_files = [\"gap.xml*\"],\n",
+    "    pre_cmds=[\"conda activate dev\"])\n",
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
     "    remote_info=remote_info)\n",
@@ -529,9 +658,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      atomization_energy/a atomization_energy/a    F/c    F/c\n",
+      "                    meV/at                    #  meV/Å      #\n",
+      "test                 14.02                   50 559.73   5223\n",
+      "train                13.45                   50 558.58   5211\n",
+      "_ALL_                13.74                  100 559.16  10434\n"
+     ]
+    }
+   ],
    "source": [
     "# calculate atomization energies\n",
     "for fn in [train_fn_with_gap, test_fn_with_gap]:\n",
@@ -566,11 +707,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "nbsphinx": "hidden"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isolated_atoms.xtb.xyz\n",
+      "1.ch.rdkit.xyz\n",
+      "2.ch.rdkit.md.traj.xyz\n",
+      "3.ch.rdkit.md.traj.filtered.xyz\n",
+      "4.ch.rdkit.md.traj.local_soap.xyz\n",
+      "5.ch.rdkit.md.traj.soap.cur_selection.xyz\n",
+      "6.1.train.xyz\n",
+      "6.2.test.xyz\n",
+      "gap.xml\n",
+      "7.1.train.gap.xyz\n",
+      "7.2.test.gap.xyz\n",
+      "gap_rmses.png\n",
+      "{'atomization_energy/atom': {'train': {'RMSE': 0.01345485566238174, 'MAE': 0.010637428620219111, 'count': 50}, '_ALL_': {'RMSE': 0.01374062897596706, 'MAE': 0.010792872309519384, 'count': 100}, 'test': {'RMSE': 0.014020578747499877, 'MAE': 0.010948315998819656, 'count': 50}}, 'forces/comp': {'train': {'RMSE': 0.5585758913153216, 'MAE': 0.41323806712531186, 'count': 5211}, '_ALL_': {'RMSE': 0.5591550158316371, 'MAE': 0.4112361438604562, 'count': 10434}, 'test': {'RMSE': 0.5597322126669515, 'MAE': 0.40923882007466966, 'count': 5223}}}\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb Cell 28\u001b[0m in \u001b[0;36m<cell line: 45>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X36sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m             pred_val \u001b[39m=\u001b[39m errors[prop_key][config_key][measure_key]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X36sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m             \u001b[39massert\u001b[39;00m val \u001b[39m==\u001b[39m approx(pred_val, \u001b[39mabs\u001b[39m\u001b[39m=\u001b[39m\u001b[39m3e-1\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMismatch for ref prop \u001b[39m\u001b[39m{\u001b[39;00mprop_key\u001b[39m}\u001b[39;00m\u001b[39m config \u001b[39m\u001b[39m{\u001b[39;00mconfig_key\u001b[39m}\u001b[39;00m\u001b[39m measure \u001b[39m\u001b[39m{\u001b[39;00mmeasure_key\u001b[39m}\u001b[39;00m\u001b[39m ref \u001b[39m\u001b[39m{\u001b[39;00mval\u001b[39m}\u001b[39;00m\u001b[39m != actual \u001b[39m\u001b[39m{\u001b[39;00mpred_val\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bwo/home/eg475/dev/workflow/docs/source/examples.daisy_chain_mlip_fitting.ipynb#X36sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from pytest import approx\n",
@@ -615,7 +787,8 @@
     "            if measure_key == \"count\":\n",
     "                continue\n",
     "            pred_val = errors[prop_key][config_key][measure_key]\n",
-    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
+    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n",
+    "assert False\n"
    ]
   },
   {
