update with rng seed

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -95,10 +95,8 @@
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
     "# this cell is hidden from tutorials. \n",
-    "import os\n",
     "random_seed = 20230301\n",
-    "np.random.seed(random_seed)\n",
-    "os.environ[\"WFL_DETERMINISTIC_HACK\"] = \"1\""
+    "np.random.seed(random_seed)"
    ]
   },
   {
@@ -240,18 +238,35 @@
     "        \"partitions\" : \"standard\"}, \n",
     "    \"check_interval\": 5,\n",
     "    \"num_inputs_per_queued_job\" :20,\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"nbsphinx": "hidden"},
+   "outputs": [],
+   "source": [
+    "# add random seet for testing purposes\n",
+    "# this cell is hidden from tutorials. \n",
     "\n",
+    "md_params[\"autopara_rng_seed\"] = random_seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "md_sample = md.sample(\n",
     "    inputs=smiles_configs, \n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
     "    autopara_info = AutoparaInfo(\n",
-    "        # remote_info=remote_info\n",
-    "        num_python_subprocesses=2\n",
-    "        ),\n",
-    "    **md_params\n",
-    "    )\n"
+    "        remote_info=remote_info\n",
+    "        num_python_subprocesses=2),\n",
+    "    **md_params)\n"
    ]
   },
   {
