--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -244,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# add random seet for testing purposes\n",
@@ -264,7 +266,7 @@
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
     "    autopara_info = AutoparaInfo(\n",
-    "        remote_info=remote_info\n",
+    "        remote_info=remote_info,\n",
     "        num_python_subprocesses=2),\n",
     "    **md_params)\n"
    ]
