tightened error test

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -646,7 +646,7 @@
     "            if measure_key == \"count\":\n",
     "                continue\n",
     "            pred_val = errors[prop_key][config_key][measure_key]\n",
-    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
+    "            assert val == approx(pred_val), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
    ]
   },
   {
