update errors and tighten comparison threshold

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -627,16 +627,16 @@
     "    print(file)\n",
     "    assert Path(file).exists()\n",
     "\n",
-    "\n",
     "ref_errors = {\n",
     "    'atomization_energy/atom': {\n",
-    "        'train': {'RMSE': 0.023849550801771195, 'MAE': 0.019971738986477784, 'count': 50}, \n",
-    "        '_ALL_': {'RMSE': 0.02450676656293013, 'MAE': 0.020064544549953763, 'count': 100}, \n",
-    "        'test': {'RMSE': 0.02514681175206184, 'MAE': 0.02015735011342974, 'count': 50}}, \n",
+    "        'train': {'RMSE': 0.01784008096943666, 'MAE': 0.014956982529185385, 'count': 50}, \n",
+    "        '_ALL_': {'RMSE': 0.01810274269833562, 'MAE': 0.015205129586306461, 'count': 100}, \n",
+    "        'test': {'RMSE': 0.018361647458989924, 'MAE': 0.015453276643427535, 'count': 50}}, \n",
     "    'forces/comp': {\n",
-    "        'train': {'RMSE': 0.7436094643663678, 'MAE': 0.5152898115037744, 'count': 5034}, \n",
-    "        '_ALL_': {'RMSE': 0.7235685620391954, 'MAE': 0.5077753348085652, 'count': 10134}, \n",
-    "        'test': {'RMSE': 0.7032271391631981, 'MAE': 0.500358104282353, 'count': 5100}}}\n",
+    "        'train': {'RMSE': 0.6064186755127647, 'MAE': 0.440771517768513, 'count': 5037}, \n",
+    "        '_ALL_': {'RMSE': 0.6150461768441347, 'MAE': 0.44579797424459006, 'count': 10074}, \n",
+    "        'test': {'RMSE': 0.6235543194385854, 'MAE': 0.450824430720667, 'count': 5037}}\n",
+    "}\n",
     "\n",
     "print(errors)\n",
     "\n",
@@ -646,7 +646,7 @@
     "            if measure_key == \"count\":\n",
     "                continue\n",
     "            pred_val = errors[prop_key][config_key][measure_key]\n",
-    "            assert val == approx(pred_val, abs=3e-1), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
+    "            assert val == approx(pred_val), f'Mismatch for ref prop {prop_key} config {config_key} measure {measure_key} ref {val} != actual {pred_val}'\n"
    ]
   },
   {
