rename stuff in docs

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -148,7 +148,7 @@
     "outputs=OutputSpec(isolated_at_fname, tags={\"config_type\": \"isolated_atom\"})\n",
     "\n",
     "# calculate reference energy\n",
-    "isolated_atoms = generic.run(\n",
+    "isolated_atoms = generic.calculate(\n",
     "    inputs=inputs,\n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
@@ -187,7 +187,7 @@
     "    'C=C1CC2c3ccccc3C1c1ccccc12']\n",
     "\n",
     "outputs = OutputSpec(\"1.ch.rdkit.xyz\")\n",
-    "smiles_configs = smiles.run(all_smiles, outputs=outputs)"
+    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs)"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "# this cell is hidden from docs. \n",
     "\n",
     "outputs = OutputSpec(\"1.ch.rdkit.xyz\", overwrite=True)\n",
-    "smiles_configs = smiles.run(all_smiles, outputs=outputs, randomSeed=random_seed)"
+    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs, randomSeed=random_seed)"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_sample = md.sample(\n",
+    "md_sample = md.md(\n",
     "    inputs=smiles_configs, \n",
     "    outputs=outputs,\n",
     "    calculator=xtb_calc,\n",
@@ -331,7 +331,7 @@
     "# this function isn't parallelised here, but can be\n",
     "# by setting WFL_NUM_PYTHON_SUBPROCESSES or\n",
     "# WFL_EXPYRE_INFO\n",
-    "md_soap_local = wfl.descriptors.quippy.calc(\n",
+    "md_soap_local = wfl.descriptors.quippy.calculate(\n",
     "    inputs=md_sample,\n",
     "    outputs=outputs,\n",
     "    descs=descriptor,\n",
@@ -345,7 +345,7 @@
     "    at.info[descriptor_key] = at_desc \n",
     "    return at\n",
     "\n",
-    "md_soap_global = wfl.map.run(\n",
+    "md_soap_global = wfl.map.map(\n",
     "    inputs = md_soap_local,\n",
     "    outputs = OutputSpec(), \n",
     "    map_func = get_average_soap, \n",
@@ -387,7 +387,7 @@
     "    return at\n",
     "\n",
     "\n",
-    "processed_cur_selection = wfl.map.run(\n",
+    "processed_cur_selection = wfl.map.map(\n",
     "    cur_selection,\n",
     "    OutputSpec(),\n",
     "    map_func = process)\n",
@@ -538,7 +538,7 @@
     "gap_calc_autopara_info = AutoparaInfo(\n",
     "    remote_info=remote_info)\n",
     "\n",
-    "generic.run(\n",
+    "generic.calculate(\n",
     "    inputs=inputs,\n",
     "    outputs=outputs,\n",
     "    calculator=gap_calc,\n",
