--- a/examples.daisy_chain_mlip_fitting.ipynb
+++ b/examples.daisy_chain_mlip_fitting.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MLIP fitting workflow\n",
+    "# GAP fit workflow with many wfl use-case examples \n",
     "\n",
     "This notebook walks though a lightweight workflow of fitting a MLIP to showcase usage of a wide range of wfl functions and ways they can be used. \n",
     "\n",
