--- a/docs/source/examples.fhiaims_calculator.ipynb
+++ b/docs/source/examples.fhiaims_calculator.ipynb
@@ -31,7 +31,7 @@
     "import wfl\n",
     "from wfl.calculators.aims import Aims\n",
     "from wfl.calculators import generic\n",
-    "from wfl.autoparallelize.autoparainfo import AutoparaInfo\n",
+    "from wfl.autoparallelize import AutoparaInfo\n",
     "from wfl.configset import ConfigSet, OutputSpec\n",
     "\n",
     "\n",
