--- a/_sources/examples.fhiaims_calculator.ipynb
+++ b/_sources/examples.fhiaims_calculator.ipynb
@@ -16,7 +16,7 @@
     "Note that for non-periodic systems the calculations will be performed with the exact same settings, but without parameter specific to periodic systems (e.g. `k_grid`, `compute_analytical_stress`, etc.).\n",
     "The last parameter `calculator_exec` defines the command used to call FHI-Aims and start an individual calculation, including specifications for the parallelization of that specific calcuation and excluding any redirection of the output (i.e. without e.g. `>> aims.out`).\\\n",
     "Now we define a `calculator` of the form ` (calc_constructor, args, kwargs)` using the `Aims` calculator of Workflow and the parameter dictionary we have just defined.\n",
-    "Finally, we apply the `generic.run()` function to process all the input structures in parallel (defined via the `autopara_info` settings). The values of the calculated `properties` will be written into `Output_Structures.xyz` with keys that have the specified `output_prefix`. Note that for non-periodic systems the property \"stress\" will be ignored."
+    "Finally, we apply the `generic.calculate()` function to process all the input structures in parallel (defined via the `autopara_info` settings). The values of the calculated `properties` will be written into `Output_Structures.xyz` with keys that have the specified `output_prefix`. Note that for non-periodic systems the property \"stress\" will be ignored."
    ]
   },
   {
@@ -65,7 +65,7 @@
     "calculator = (Aims, [], aims_kwargs)\n",
     "\n",
     "\n",
-    "generic.run(\n",
+    "generic.calculate(\n",
     "    inputs = inputs,\n",
     "    outputs = outputs,\n",
     "    calculator = calculator,\n",
