--- a/examples.daisy_chain_mlip_fitting.ipynb
+++ b/examples.daisy_chain_mlip_fitting.ipynb
@@ -73,8 +73,8 @@
     "import wfl.select.by_descriptor\n",
     "import wfl.fit.gap.simple\n",
     "from wfl.calculators import generic\n",
-    "from wfl.autoparallelize.autoparainfo import AutoparaInfo\n",
-    "from wfl.autoparallelize.remoteinfo import RemoteInfo\n",
+    "from wfl.autoparallelize import AutoparaInfo\n",
+    "from wfl.autoparallelize import RemoteInfo\n",
     "from wfl.generate import smiles\n",
     "from wfl.utils.configs import atomization_energy\n",
     "from wfl.select.simple import by_bool_func\n",
