Try to update examples.daisy_chain_mlip_fitting.ipynb to new rng usage

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -88,15 +88,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
-    "# this cell is hidden from tutorials. \n",
     "random_seed = 20230301\n",
-    "np.random.seed(random_seed)"
+    "rng = np.random.default_rng(random_seed)"
    ]
   },
   {
@@ -252,7 +249,7 @@
     "# add random seet for testing purposes\n",
     "# this cell is hidden from tutorials. \n",
     "\n",
-    "md_params[\"autopara_rng_seed\"] = random_seed"
+    "md_params[\"rng\"] = rng"
    ]
   },
   {
