Try to fit daisy-chain MLIP example for new rng

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -92,8 +92,7 @@
    "outputs": [],
    "source": [
     "# set random seed, so that MD runs, etc are reproducible and we can check for RMSEs. \n",
-    "random_seed = 20230301\n",
-    "rng = np.random.default_rng(random_seed)"
+    "rng = np.random.default_rng(20230301)"
    ]
   },
   {
@@ -197,7 +196,8 @@
     "# this cell is hidden from docs. \n",
     "\n",
     "outputs = OutputSpec(\"1.ch.rdkit.xyz\", overwrite=True)\n",
-    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs, randomSeed=random_seed)"
+    "# set seed for smiles generation to a value from our (reproducible) random number generator\n",
+    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs, randomSeed=rng.integers(2 ** 32))"
    ]
   },
   {
@@ -370,7 +370,7 @@
     "    inputs=md_soap_global,\n",
     "    outputs=outputs,\n",
     "    num=100,                    # target number of structures to pick\n",
-    "    at_descs_info_key=\"SOAP\")\n",
+    "    at_descs_info_key=\"SOAP\", rng=rng)\n",
     "    \n",
     "\n",
     "train_fname = \"6.1.train.xyz\"\n",
@@ -479,7 +479,9 @@
     "# set to None for github testing purposes\n",
     "# This cell is hidden from being rendered in the docs. \n",
     "# remote_info = None\n",
-    "gap_params[\"rnd_seed\"] = random_seed "
+    "\n",
+    "# set seed for gap fitting to a value from our (reproducible) random number generator\n",
+    "gap_params[\"rnd_seed\"] = rng.integers(2 ** 31) "
    ]
   },
   {
