Fix type of random seed passed to smiles.smiles in examples.daisy_chain_mlip_fitting.ipynb

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -197,7 +197,8 @@
     "\n",
     "outputs = OutputSpec(\"1.ch.rdkit.xyz\", overwrite=True)\n",
     "# set seed for smiles generation to a value from our (reproducible) random number generator\n",
-    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs, randomSeed=rng.integers(2 ** 32))"
+    "smiles_configs = smiles.smiles(all_smiles, outputs=outputs, randomSeed=int(rng.integers(np.iinfo(np.int32).max,\n",
+    "                                                                                        dtype=np.int32)))"
    ]
   },
   {
@@ -672,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
